--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "engines": {
+    "node": "16.16.0"
+  },
   "author": "Mayank Yadav",
   "license": "ISC",
   "dependencies": {
